RESOLVED FIXED264437
AX: Caption and figure caption elements are ignored.
https://bugs.webkit.org/show_bug.cgi?id=264437
Summary AX: Caption and figure caption elements are ignored.
Andres Gonzalez
Reported 2023-11-08 14:12:56 PST
.
Attachments
Patch (13.85 KB, patch)
2023-11-08 14:16 PST, Andres Gonzalez
no flags
Patch (14.53 KB, patch)
2023-11-08 17:20 PST, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2023-11-08 14:13:18 PST
Andres Gonzalez
Comment 2 2023-11-08 14:16:50 PST
Tyler Wilcock
Comment 3 2023-11-08 15:28:36 PST
Comment on attachment 468521 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=468521&action=review > Source/WebCore/accessibility/mac/AccessibilityObjectMac.mm:-141 > - if (roleValue() == AccessibilityRole::Caption && ariaRoleAttribute() == AccessibilityRole::Unknown) > - return AccessibilityObjectInclusion::IgnoreObject; I assume this was ignored because the caption text is exposed automatically by moving focus to the table. By preventing it from being ignored, will there now be an extra stop that causes ATs like VoiceOver to speak the caption twice — once for the table, and once when focus moves to the caption? I'm less familiar with figcaption, but I have to imagine the idea was the same.
Andres Gonzalez
Comment 4 2023-11-08 16:39:48 PST
(In reply to Tyler Wilcock from comment #3) > Comment on attachment 468521 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=468521&action=review > > > Source/WebCore/accessibility/mac/AccessibilityObjectMac.mm:-141 > > - if (roleValue() == AccessibilityRole::Caption && ariaRoleAttribute() == AccessibilityRole::Unknown) > > - return AccessibilityObjectInclusion::IgnoreObject; > > I assume this was ignored because the caption text is exposed automatically > by moving focus to the table. By preventing it from being ignored, will > there now be an extra stop that causes ATs like VoiceOver to speak the > caption twice — once for the table, and once when focus moves to the > caption? I'm less familiar with figcaption, but I have to imagine the idea > was the same. No, VO doesn't have an extra VO + arrow stop in table captions with this change.
Andres Gonzalez
Comment 5 2023-11-08 17:20:31 PST
Created attachment 468527 [details] Patch Updating test expectation for WK1
EWS
Comment 6 2023-11-09 11:30:17 PST
Committed 270467@main (30503bbfeadf): <https://commits.webkit.org/270467@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468527 [details].
Note You need to log in before you can comment on or make changes to this bug.