AX: Caption and figure caption elements are ignored. https://bugs.webkit.org/show_bug.cgi?id=264437 <rdar://problem/118139030>

Reviewed by Tyler Wilcock.

<caption> and <figcaption> are ignored causing that AXTitleUIElement can return an ignored object. This is a problem in ITM since ignored objects are not part of the AX tree. This inconsistency in the API was not caught by the figure-element.html test due to a bug in the test itself. This patch rewrites this test, updates several others and fixes the underlying problem

* LayoutTests/accessibility/help-text-expected.txt:
* LayoutTests/accessibility/mac/figure-element-expected.txt:
* LayoutTests/accessibility/mac/figure-element.html:
* LayoutTests/accessibility/roles-computedRoleString.html:
* LayoutTests/platform/mac-wk1/accessibility/roles-exposed-expected.txt:
* LayoutTests/platform/mac-wk2/accessibility/roles-exposed-expected.txt:
* LayoutTests/platform/mac/accessibility/roles-computedRoleString-expected.txt:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::determineAccessibilityRoleFromNode const):
* Source/WebCore/accessibility/mac/AccessibilityObjectMac.mm:
(WebCore::AccessibilityObject::accessibilityPlatformIncludesObject const):

Canonical link: https://commits.webkit.org/270467@main